fixed layout bugs

--- a/src/views/sequences/GridItemBase.css
+++ b/src/views/sequences/GridItemBase.css
@@ -10,7 +10,7 @@
 .image,
 .initials {
   width: 100%;
-  height: 10rem;
+  height: 11rem;
 }
 
 .image > img {
